First commited as before_67929_rev1