@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2014 IBM Corporation and others.
+ * Copyright (c) 2007, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -27,9 +27,9 @@ import org.eclipse.ui.views.markers.MarkerItem;
 
 /**
  * MarkerCompletionField is the class that specifies the completion entry.
- * 
+ *
  * @since 3.4
- * 
+ *
  */
 public class MarkerCompletionField extends MarkerField {
 
@@ -39,7 +39,7 @@ public class MarkerCompletionField extends MarkerField {
 
 		/**
 		 * Create a new instance of the receiver.
-		 * 
+		 *
 		 * @param viewer
 		 */
 		public CompletionEditingSupport(ColumnViewer viewer) {
@@ -48,11 +48,7 @@ public class MarkerCompletionField extends MarkerField {
 					.getControl());
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.EditingSupport#canEdit(java.lang.Object)
-		 */
+		@Override
 		protected boolean canEdit(Object element) {
 			if (element instanceof MarkerEntry)
 				return ((MarkerEntry) element).getAttributeValue(
@@ -60,31 +56,18 @@ public class MarkerCompletionField extends MarkerField {
 			return false;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.EditingSupport#getCellEditor(java.lang.Object)
-		 */
+		@Override
 		protected CellEditor getCellEditor(Object element) {
 			return editor;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.EditingSupport#getValue(java.lang.Object)
-		 */
+		@Override
 		protected Object getValue(Object element) {
-			return new Boolean(((MarkerEntry) element).getAttributeValue(
+			return Boolean.valueOf(((MarkerEntry) element).getAttributeValue(
 					IMarker.DONE, false));
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.EditingSupport#setValue(java.lang.Object,
-		 *      java.lang.Object)
-		 */
+		@Override
 		protected void setValue(Object element, Object value) {
 			MarkerEntry entry = (MarkerEntry) element;
 			Boolean booleanValue = (Boolean) value;
@@ -113,37 +96,24 @@ public class MarkerCompletionField extends MarkerField {
 		super();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#compare(org.eclipse.ui.internal.provisional.views.markers.api.MarkerItem,
-	 *      org.eclipse.ui.internal.provisional.views.markers.api.MarkerItem)
-	 */
+	@Override
 	public int compare(MarkerItem item1, MarkerItem item2) {
 		return getDoneConstant(item2) - getDoneConstant(item1);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.internal.provisional.views.markers.MarkerField#getColumnHeaderText()
-	 */
+	@Override
 	public String getColumnHeaderText() {
 		return MarkerSupportInternalUtilities.EMPTY_STRING;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getColumnTooltipText()
-	 */
+	@Override
 	public String getColumnTooltipText() {
 		return getName();
 	}
 
 	/**
 	 * Return the image for task completion.
-	 * 
+	 *
 	 * @return Image
 	 */
 	private Image getCompleteImage() {
@@ -151,18 +121,14 @@ public class MarkerCompletionField extends MarkerField {
 				getImageManager());
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getDefaultColumnWidth(org.eclipse.swt.widgets.Control)
-	 */
+	@Override
 	public int getDefaultColumnWidth(Control control) {
 		return 40;
 	}
 
 	/**
 	 * Return the constant that indicates whether or not the receiver is done
-	 * 
+	 *
 	 * @param item
 	 * @return 1 if it is done, 0 if it not and -1 if it cannot be determined.
 	 */
@@ -180,11 +146,7 @@ public class MarkerCompletionField extends MarkerField {
 		return done;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getEditingSupport(org.eclipse.jface.viewers.ColumnViewer)
-	 */
+	@Override
 	public EditingSupport getEditingSupport(ColumnViewer viewer) {
 
 		return new CompletionEditingSupport(viewer);
@@ -192,7 +154,7 @@ public class MarkerCompletionField extends MarkerField {
 
 	/**
 	 * Get the image for item.
-	 * 
+	 *
 	 * @param element
 	 * @return Image
 	 */
@@ -209,20 +171,12 @@ public class MarkerCompletionField extends MarkerField {
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.internal.provisional.views.markers.MarkerField#getValue(org.eclipse.ui.internal.provisional.views.markers.MarkerItem)
-	 */
+	@Override
 	public String getValue(MarkerItem item) {
 		return MarkerSupportInternalUtilities.EMPTY_STRING;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.views.markers.MarkerField#update(org.eclipse.jface.viewers.ViewerCell)
-	 */
+	@Override
 	public void update(ViewerCell cell) {
 		super.update(cell);
 		cell.setImage(getImage(cell.getElement()));
